# RAG-Tests

./: .env  README.md  pyproject.toml
rag_tests/: add_data_to_qdrant.ipynb  config.py  experiment_notebook.ipynb  notebook1.ipynb  notebook2.ipynb  qdrant_db.py  tone.json
rag_tests/core/: __init__.py  logger_utils.py
rag_tests/data_logic/: chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
rag_tests/db/: documents.py  mongo.py
rag_tests/llm/: chain.py  prompt_templates.py
rag_tests/models/: __init__.py  base.py  chunk.py  clean.py  embedded_chunk.py  raw.py
rag_tests/rag/: query_expansion.py  reranking.py  retreiver.py  self_query.py
rag_tests/utils/: chunking.py  cleaning.py  embeddings.py
