[tool.poetry]
name = "rag-tests"
version = "0.1.0"
description = ""
authors = ["Parth Mahajan <parthmahajan08092003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.5.2"
langchain = "^0.3.3"
sentence-transformers = "^3.2.0"
langchain-openai = "^0.2.2"
pymongo = "^4.10.1"
qdrant-client = "^1.12.0"
ipykernel = "^6.29.5"
unidecode = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
